Fix #1316 use style override to make context menu visible, hide display

--- a/maqetta.core.client/WebContent/davinci/ve/resources/content.css
+++ b/maqetta.core.client/WebContent/davinci/ve/resources/content.css
@@ -1,6 +1,14 @@
 /* needed for theme editor subwidget menu pop up */
 @import url("Menu.css");
 
+.maqHidden {
+	display: none;
+}
+
+.maqShown {
+	visibility: visible !important;
+}
+
 .maqFocus {
 	z-index: 1000;
 }
